--- a/data/cards/39210885.yaml
+++ b/data/cards/39210885.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can add 1 "Valmonica" monster from your Deck to your hand. If the 3rd Resonance Counter is placed on a card in your Pendulum Zone: You can target 1 monster your opponent controls; take control of it until the End Phase, but it cannot declare an attack. You can only use this effect of "Angelic-Demonic Selector - "Valmonica"" once per turn. You can only activate 1 "Angelic-Demonic Selector - "Valmonica"" per turn.
+    When this card is activated: You can add 1 "Valmonica" monster from your Deck to your hand. If the 3rd Resonance Counter is placed on a card in your Pendulum Zone (except during the Damage Step): You can target 1 monster your opponent controls; take control of it until the End Phase, but it cannot declare an attack. You can only use this effect of "Angelic-Demonic Selector - "Valmonica"" once per turn. You can only activate 1 "Angelic-Demonic Selector - "Valmonica"" per turn.
   de:
   es:
   fr:
