--- a/data/cards/kdb19359.yaml
+++ b/data/cards/kdb19359.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19359
 password:
 name:
   en: Anotherverse Gluttonia
@@ -42,6 +42,6 @@ sets:
     - Super Rare
     - Ultra Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1008693
