--- a/rush.yaml
+++ b/rush.yaml
@@ -116091,6 +116091,66 @@ yugipedia_page_id: 1008684
 ---
 konami_id:
 name:
+  en: Straynge Cat Magician
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: はぐれ<ruby>使<rt>つか</rt></ruby>い<ruby>魔術師<rt>マジシャン</rt></ruby>
+  ja_romaji: Hagure Tsukai Majishan
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: EARTH
+level: 1
+atk: 0
+def: 1400
+images:
+- index: 1
+  image: StrayngeCatMagician-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP032
+    set_name: Saikyō Jump November 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1008803
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
