--- a/data/tcg-speed-skill/yugipedia1004333.yaml
+++ b/data/tcg-speed-skill/yugipedia1004333.yaml
@@ -1,6 +1,6 @@
 name:
   en: Ultimate Wizardry
-  de:
+  de: Ultimative Zauberei
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Yami Yugi / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     When you activate this Skill, place up to 1 Spell Counter on each face-up Spellcaster monster you control that you can place a Spell Counter on. Once per turn, during your Main Phase, you can place 1 Spell Counter on a face-up Spellcaster monster you control that you can place a Spell Counter on.
-  de:
+  de: |-
+    Wenn du diese Fähigkeit aktivierst, lege bis zu 1 Zauberzählmarke auf jedes offene Hexer-Monster, das du kontrollierst und auf das du eine Zauberzählmarke legen kannst. Einmal pro Spielzug, während deiner Main Phase, kannst du 1 Zauberzählmarke auf ein offenes Hexer-Monster legen, das du kontrollierst und auf das du eine Zauberzählmarke legen kannst.
   es:
   fr:
   it:
