--- a/data/tcg-speed-skill/yugipedia1004357.yaml
+++ b/data/tcg-speed-skill/yugipedia1004357.yaml
@@ -1,6 +1,6 @@
 name:
   en: Whale of a Tale
-  de:
+  de: Die Geschichte vom Wal
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Mako / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -28,7 +29,9 @@ effect:
   en: |-
     Discard 1 card from your hand and add 1 "Fortress Whale" or "Fortress Whale's Oath" from your Deck to your hand. "Fortress Whale" monsters you control gain the following effect:
     ● Your opponent cannot target face-up WATER monsters you control with Spell/Trap cards or effects.
-  de:
+  de: |-
+    Wirf 1 Karte von deiner Hand ab und füge deiner Hand „Festungswal“ oder „Eid des Festungswals“ von deinem Deck hinzu. „Festungswal“-Monster, die du kontrollierst, erhalten den folgenden Effekt:
+    • Dein Gegner kann offene WASSER Monster, die du kontrollierst, nicht als Ziel für Zauber-/Fallenkarten oder -effekte wählen.
   es:
   fr:
   it:
