--- a/data/tcg-speed-skill/yugipedia1004338.yaml
+++ b/data/tcg-speed-skill/yugipedia1004338.yaml
@@ -1,6 +1,6 @@
 name:
   en: Iron Grit
-  de:
+  de: Eiserner Mut
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Joey / Skill
 activation:
   en: |-
     At the start of the Duel, flip this card over.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     "Gearfried the Iron Knight(s)" you control are unaffected by card effects.
-  de:
+  de: |-
+    „Gerfried, Eisenritter“, die du kontrollierst, bleiben von Karteneffekten unberührt.
   es:
   fr:
   it:
