--- a/rush.yaml
+++ b/rush.yaml
@@ -116151,6 +116151,64 @@ yugipedia_page_id: 1008803
 ---
 konami_id:
 name:
+  en: Lullalabind
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラララバインド
+  ja_romaji: Rararabaindo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster, shuffle 2 Psychic Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change 1 face-up Level 8 or lower monster on your opponent's field to face-down Defense Position. Then, you can Special Summon 1 Level 2 Psychic Type monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Psychic Musician
+images:
+- index: 1
+  image: Lullalabind-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP073
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1008886
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
