--- a/rush.yaml
+++ b/rush.yaml
@@ -116171,7 +116171,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手がモンスターを召喚・特殊召喚した時、自分の墓地のモンスター（サイキック族）２体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -116183,7 +116184,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター（レベル８以下）１体を選んで裏側守備表示にする。その後、自分の墓地のモンスター（レベル２／サイキック族）１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
