--- a/data/cards/07030340.yaml
+++ b/data/cards/07030340.yaml
@@ -8,7 +8,7 @@ name:
   it: Fabbrica delle 100 Macchine
   pt:
   ja: <ruby>百<rt>ひゃっ</rt></ruby><ruby>機<rt>き</rt></ruby><ruby>夜<rt>や</rt></ruby><ruby>工<rt>こう</rt></ruby>
-  ja_romaji: Hyakki Yakō
+  ja_romaji: Hyakkiyakō
   ko: 백기야공
   ko_rr:
   zh-TW:
