--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -71,6 +71,8 @@ images:
   image: DarkMagician-PPC1-JP-C.png
 - index: 10
   image: DarkMagician-CCC1-JP-NPR.png
+- index: 11
+  image: DarkMagician-711C-JP-NPR.png
 sets:
   en:
   - set_number: SYE-001
