--- a/data/cards/98502113.yaml
+++ b/data/cards/98502113.yaml
@@ -62,6 +62,8 @@ images:
 - index: 3
   image: DarkPaladin-MIL1-EN-C-1E.png
   illustration: DarkPaladin-TF05-JP-VG-artwork.png
+- index: 4
+  image: DarkPaladin-711C-JP-NPR.png
 sets:
   en:
   - set_number: DR1-EN160
