--- a/data/cards/78193831.yaml
+++ b/data/cards/78193831.yaml
@@ -48,6 +48,8 @@ images:
 - index: 2
   image: BusterBlader-YAP1-EN-UR-LE.png
   illustration: BusterBlader-TF05-JP-VG-2-artwork.png
+- index: 3
+  image: BusterBlader-711C-JP-NPR.png
 sets:
   en:
   - set_number: DB1-EN095
