--- a/data/rush/15328.yaml
+++ b/data/rush/15328.yaml
@@ -44,6 +44,8 @@ images:
   illustration: GaiaTheFierceKnight-DBR-JP-VG-artwork.png
 - index: 2
   image: GaiaTheFierceKnight-RDKP14-JP-ORR.png
+- index: 3
+  image: GaiaTheFierceKnight-RD711C-JP-NPR.png
 sets:
   ja:
   - set_number: RD/WJMP-JP001
