--- a/data/rush/17838.yaml
+++ b/data/rush/17838.yaml
@@ -37,6 +37,9 @@ series:
 images:
 - index: 1
   image: CurseofDragon-RDB222-JP-C.png
+  illustration: CurseofDragon-G002-JP-VG-artwork.png
+- index: 2
+  image: CurseofDragon-RD711C-JP-NPR.png
 sets:
   ja:
   - set_number: RD/B222-JP001
