--- a/data/rush/18298.yaml
+++ b/data/rush/18298.yaml
@@ -37,6 +37,9 @@ series:
 images:
 - index: 1
   image: GaiatheDragonChampion-RDB223-JP-C.png
+  illustration: GaiatheDragonChampion-G002-JP-VG-artwork.png
+- index: 2
+  image: GaiatheDragonChampion-RD711C-JP-NPR.png
 sets:
   ja:
   - set_number: RD/B223-JP001
