--- a/data/cards/02971090.yaml
+++ b/data/cards/02971090.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     被誉为战神的天使。不过谁也没见过那场战事。
 card_type: Monster
-monster_type_line: Fairy
+monster_type_line: Fairy / Normal
 attribute: LIGHT
 level: 5
 atk: 1800
