--- a/data/cards/04179849.yaml
+++ b/data/cards/04179849.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     生活在被红叶围绕的地方，绿树灵王的妃子。
 card_type: Monster
-monster_type_line: Plant
+monster_type_line: Plant / Normal
 attribute: EARTH
 level: 5
 atk: 1800
