--- a/data/cards/04392470.yaml
+++ b/data/cards/04392470.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     披着黑披风的魔术师。其正体是只能说话的狮子。
 card_type: Monster
-monster_type_line: Spellcaster
+monster_type_line: Spellcaster / Normal
 attribute: EARTH
 level: 5
 atk: 1350
