--- a/data/cards/07225792.yaml
+++ b/data/cards/07225792.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     进化过的野兽。力量有相当的提高。
 card_type: Monster
-monster_type_line: Beast
+monster_type_line: Beast / Normal
 attribute: EARTH
 level: 4
 atk: 1300
