--- a/data/cards/10045474.yaml
+++ b/data/cards/10045474.yaml
@@ -265,6 +265,9 @@ sets:
     - Secret Rare
     - Extra Secret Rare
     - Quarter Century Secret Rare
+  - set_number: SR14-JP039
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: FLOD-KR077
     set_name: Flames of Destruction
