--- a/data/cards/10476868.yaml
+++ b/data/cards/10476868.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     一边用双肩的机关枪发射，一边用身体乱撞进行攻击。
 card_type: Monster
-monster_type_line: Rock
+monster_type_line: Rock / Normal
 attribute: EARTH
 level: 4
 atk: 1000
