--- a/data/cards/11793047.yaml
+++ b/data/cards/11793047.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     蛇发女所产下的巨卵。其他一切资料不详。
 card_type: Monster
-monster_type_line: Fiend
+monster_type_line: Fiend / Normal
 attribute: DARK
 level: 3
 atk: 300
