--- a/data/cards/16528181.yaml
+++ b/data/cards/16528181.yaml
@@ -1,7 +1,7 @@
 konami_id: 19200
 password: 16528181
 name:
-  en: Pharaonic Sarcophagus
+  en: King's Sarcophagus
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    "Horus" monsters you control cannot be destroyed by card effects, unless they target them. You can send 1 card from your hand to the GY; send 1 "Horus" monster from your Deck to the GY. You can only use this effect of "Pharaonic Sarcophagus" up to four times per turn. Once per turn, at the start of the Damage Step, if your "Horus" monster battles an opponent's monster: You can send that opponent's monster to the GY.
+    "Horus" monsters you control cannot be destroyed by card effects, unless they target them. You can send 1 card from your hand to the GY; send 1 "Horus" monster from your Deck to the GY. You can only use this effect of "King's Sarcophagus" up to four times per turn. Once per turn, at the start of the Damage Step, if your "Horus" monster battles an opponent's monster: You can send that opponent's monster to the GY.
   de:
   es:
   fr:
@@ -31,7 +31,7 @@ card_type: Spell
 property: Continuous
 images:
 - index: 1
-  image: PharaonicSarcophagus-AGOV-JP-R.png
+  image: KingsSarcophagus-AGOV-JP-R.png
 sets:
   ja:
   - set_number: AGOV-JP058
@@ -42,8 +42,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 979104
