--- a/data/cards/17968114.yaml
+++ b/data/cards/17968114.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     侍奉海神的美丽人鱼战士，守护着神圣的区域。
 card_type: Monster
-monster_type_line: Fish
+monster_type_line: Fish / Normal
 attribute: WATER
 level: 4
 atk: 1300
