--- a/data/cards/20315854.yaml
+++ b/data/cards/20315854.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     在妖精之中出乎意料地强，非常美丽的龙之妖精。
 card_type: Monster
-monster_type_line: Dragon
+monster_type_line: Dragon / Normal
 attribute: WIND
 level: 4
 atk: 1100
