--- a/data/cards/34320307.yaml
+++ b/data/cards/34320307.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     利用花散发花粉并咬向对方的活花瓶。
 card_type: Monster
-monster_type_line: Plant
+monster_type_line: Plant / Normal
 attribute: EARTH
 level: 3
 atk: 900
