--- a/data/cards/34690519.yaml
+++ b/data/cards/34690519.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     据说听了它的笛音的人会失去力量。
 card_type: Monster
-monster_type_line: Spellcaster
+monster_type_line: Spellcaster / Normal
 attribute: EARTH
 level: 5
 atk: 1300
