--- a/data/cards/46864967.yaml
+++ b/data/cards/46864967.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     岩石战士。挥舞着非常重的石头剑。
 card_type: Monster
-monster_type_line: Rock
+monster_type_line: Rock / Normal
 attribute: EARTH
 level: 4
 atk: 1300
