--- a/data/cards/47060154.yaml
+++ b/data/cards/47060154.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     用狂暴的力量攻击，一旦暴走无人能挡。
 card_type: Monster
-monster_type_line: Fiend
+monster_type_line: Fiend / Normal
 attribute: DARK
 level: 4
 atk: 1500
