--- a/data/cards/47330808.yaml
+++ b/data/cards/47330808.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control "Pharaonic Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Hapy, Vanguard of Horus" once per turn this way. If another card(s) you control leaves the field by an opponent's card effect while you control this monster (except during the Damage Step): You can target 2 cards that are banished and/or in either GY; either add both to the hand or shuffle both into the Deck. You can only use this effect of "Hapy, Vanguard of Horus" once per turn.
+    If you control "King's Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Hapy, Vanguard of Horus" once per turn this way. If another card(s) you control leaves the field by an opponent's card effect, while this card is in your Monster Zone (except during the Damage Step): You can target 2 cards that are banished and/or in either GY; either add both to the hand or shuffle both into the Deck. You can only use this effect of "Hapy, Vanguard of Horus" once per turn.
   de:
   es:
   fr:
