--- a/data/cards/50176820.yaml
+++ b/data/cards/50176820.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     以背后附着的炮台发射闪光粒子加农炮。
 card_type: Monster
-monster_type_line: Machine
+monster_type_line: Machine / Normal
 attribute: WATER
 level: 5
 atk: 1800
