--- a/data/cards/55210709.yaml
+++ b/data/cards/55210709.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     蓝宝石眼睛的野兽。制造幻影，趁敌人混乱的时候进行攻击。
 card_type: Monster
-monster_type_line: Beast
+monster_type_line: Beast / Normal
 attribute: EARTH
 level: 4
 atk: 1300
