--- a/data/cards/65623423.yaml
+++ b/data/cards/65623423.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     史莱姆们的老大。尽管样子上没什么区别，但别小看它，否则可是会吃亏的哦。
 card_type: Monster
-monster_type_line: Aqua
+monster_type_line: Aqua / Normal
 attribute: WATER
 level: 3
 atk: 1300
