--- a/data/cards/69992868.yaml
+++ b/data/cards/69992868.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     艺术家的天使。尤其琴技无人能出其右。
 card_type: Monster
-monster_type_line: Fairy
+monster_type_line: Fairy / Normal
 attribute: LIGHT
 level: 3
 atk: 850
