--- a/data/cards/71746462.yaml
+++ b/data/cards/71746462.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     以锐利的钩爪撕裂对方的残忍怪兽。
 card_type: Monster
-monster_type_line: Aqua
+monster_type_line: Aqua / Normal
 attribute: WATER
 level: 4
 atk: 1100
