--- a/data/cards/72929454.yaml
+++ b/data/cards/72929454.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     主要栖息在水中，也能在空中飞翔的珍奇乌龟。
 card_type: Monster
-monster_type_line: Aqua
+monster_type_line: Aqua / Normal
 attribute: WATER
 level: 6
 atk: 1900
