--- a/data/cards/75559356.yaml
+++ b/data/cards/75559356.yaml
@@ -41,7 +41,7 @@ text:
   zh-CN: |-
     暗之力制造的机器士兵，疯狂的将敌人破坏。
 card_type: Monster
-monster_type_line: Machine
+monster_type_line: Machine / Normal
 attribute: DARK
 level: 4
 atk: 1400
