--- a/data/cards/75850803.yaml
+++ b/data/cards/75850803.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     住在月亮上的魔法师。用月之魔力迷惑对方。
 card_type: Monster
-monster_type_line: Spellcaster
+monster_type_line: Spellcaster / Normal
 attribute: LIGHT
 level: 5
 atk: 1200
