--- a/data/cards/89494469.yaml
+++ b/data/cards/89494469.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     据说这个恶魔潜住在梦中，当猎物睡觉时便夺去其生命。
 card_type: Monster
-monster_type_line: Fiend
+monster_type_line: Fiend / Normal
 attribute: DARK
 level: 4
 atk: 1300
