--- a/data/cards/11335209.yaml
+++ b/data/cards/11335209.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control "Pharaonic Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Duamutef, Blessing of Horus" once per turn this way. Gains 1200 ATK/DEF for each "Horus" monster you control. If another card(s) you control leaves the field by an opponent's card effect while you control this monster (except during the Damage Step): You can draw cards equal to the number of monsters with different names in your Main Monster Zone. You can only use this effect of "Duamutef, Blessing of Horus" once per turn.
+    If you control "King's Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Duamutef, Blessing of Horus" once per turn this way. Gains 1200 ATK/DEF for each "Horus" monster you control. If another card(s) you control leaves the field by an opponent's card effect, while this card is in your Monster Zone (except during the Damage Step): You can draw cards equal to the number of monsters with different names in your Main Monster Zone. You can only use this effect of "Duamutef, Blessing of Horus" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,56 @@ images:
 - index: 1
   image: DuamutefBlessingofHorus-AGOV-JP-R.png
 sets:
+  en:
+  - set_number: AGOV-ENSP1
+    set_name: Age of Overlord Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: AGOV-EN012
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DESP1
+    set_name: Age of Overlord Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: AGOV-DE012
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FRSP1
+    set_name: Age of Overlord Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: AGOV-FR012
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-ITSP1
+    set_name: Age of Overlord Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: AGOV-IT012
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PTSP1
+    set_name: Age of Overlord Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: AGOV-PT012
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP012
     set_name: Age of Overlord
@@ -47,9 +97,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 979101
