--- a/data/cards/42418084.yaml
+++ b/data/cards/42418084.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     据说它能知道女性腹部是否存在着生命。
 card_type: Monster
-monster_type_line: Fairy
+monster_type_line: Fairy / Normal
 attribute: LIGHT
 level: 5
 atk: 1400
