--- a/data/cards/84941194.yaml
+++ b/data/cards/84941194.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control "Pharaonic Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Imsety, Glory of Horus" once per turn this way. You can only use each of the following effects of "Imsety, Glory of Horus" once per turn. You can send 2 cards from your hand to the GY, including this card; add 1 "Pharaonic Sarcophagus" from your Deck to your hand, then you can draw 1 card. If another card(s) you control leaves the field by an opponent's card effect while you control this monster (except during the Damage Step): You can send 1 card on the field to the GY.
+    If you control "King's Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Imsety, Glory of Horus" once per turn this way. You can only use each of the following effects of "Imsety, Glory of Horus" once per turn. You can send 2 cards from your hand to the GY, including this card; add 1 "King's Sarcophagus" from your Deck to your hand, then you can draw 1 card. If another card(s) you control leaves the field by an opponent's card effect, while this card is in your Monster Zone (except during the Damage Step): You can send 1 card on the field to the GY.
   de:
   es:
   fr:
