--- a/rush.yaml
+++ b/rush.yaml
@@ -116219,6 +116219,66 @@ yugipedia_page_id: 1008886
 ---
 konami_id:
 name:
+  en: Ordoll the Adorable Audio Idol
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>歌<rt>か</rt></ruby><ruby>憐<rt>れん</rt></ruby><ruby>奏<rt>そう</rt></ruby><ruby>女<rt>じょ</rt></ruby>オルドール
+  ja_romaji: Karensōjo Orudōru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle 2 monsters from your opponent's Graveyard into the Deck. Then, you can Special Summon 1 "Ordoll the Adorable Audio Idol" from your Graveyard to your field in face-up Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Effect
+attribute: LIGHT
+level: 3
+atk: 1000
+def: 1000
+images:
+- index: 1
+  image: OrdolltheAdorableAudioIdol-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP061
+    set_name: Megaroad Pack 2
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1009472
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
