--- a/data/rush/yugipedia1009472.yaml
+++ b/data/rush/yugipedia1009472.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手の墓地のモンスター２体を選んでデッキに戻す。その後、自分の墓地の「歌憐奏女オルドール」１体を選んで自分フィールドに表側守備表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
