--- a/data/cards/03170832.yaml
+++ b/data/cards/03170832.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     这鸟出现的时候，就是什么不幸之事发生前的征兆。
 card_type: Monster
-monster_type_line: Winged Beast
+monster_type_line: Winged Beast / Normal
 attribute: WIND
 level: 4
 atk: 1450
