--- a/data/cards/04582942.yaml
+++ b/data/cards/04582942.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control a "Valmonica" Monster Card: Apply 1 of these effects, or, if you control a "Valmonica" Link Monster, you can apply both, in sequence.
+    You must control a "Valmonica" Monster Card to activate and to resolve this effect. Apply 1 of these effects, or, if you control a "Valmonica" Link Monster, you can apply both, in sequence.
     ● Gain 500 LP, then you can destroy 1 Spell/Trap on the field.
     ● Take 500 damage, then you can return 1 monster on the field to the hand.
     You can only activate 1 "Valmonica of the Guiding Rhythm" per turn.
