--- a/data/cards/14037717.yaml
+++ b/data/cards/14037717.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     木之精灵，拥有非常高的智慧，发动多彩的攻击。
 card_type: Monster
-monster_type_line: Winged Beast
+monster_type_line: Winged Beast / Normal
 attribute: WIND
 level: 4
 atk: 1400
