--- a/data/cards/28003512.yaml
+++ b/data/cards/28003512.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     用寄宿着神灵的手作最后的判决，给予敌人以猛烈的攻击。
 card_type: Monster
-monster_type_line: Warrior
+monster_type_line: Warrior / Normal
 attribute: EARTH
 level: 3
 atk: 1400
