--- a/data/cards/31971040.yaml
+++ b/data/cards/31971040.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control a "Valmonica" Monster Card: Apply 1 of these effects, or, if you control a "Valmonica" Link Monster, you can apply both, in sequence.
+    You must control a "Valmonica" Monster Card to activate and to resolve this effect. Apply 1 of these effects, or, if you control a "Valmonica" Link Monster, you can apply both, in sequence.
     ● Gain 500 LP, also your opponent cannot target "Valmonica" Monster Cards you control with card effects this turn.
     ● Take 500 damage, then you can negate the effects of 1 Effect Monster your opponent controls, until the end of this turn.
     You can only activate 1 "Valmonica of the Guiding Rhythm" per turn.
