--- a/data/cards/47922711.yaml
+++ b/data/cards/47922711.yaml
@@ -30,7 +30,7 @@ text:
   zh-CN: |-
     半马半鱼的怪兽。以风一般的速度在海中奔驰。
 card_type: Monster
-monster_type_line: Beast
+monster_type_line: Beast / Normal
 attribute: EARTH
 level: 5
 atk: 1350
