--- a/data/rush/yugipedia1009549.yaml
+++ b/data/rush/yugipedia1009549.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスターがハイドラゴン族・ドラゴン族のみの場合、デッキの上からカード３枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードのレベルはターン終了時まで４上がる。その後、自分の墓地のモンスター（レベル７／地属性／ドラゴン族）１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
