--- a/data/cards/03606209.yaml
+++ b/data/cards/03606209.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     据说被其用剑斩杀之人的魂魄会离身体而去。
 card_type: Monster
-monster_type_line: Beast-Warrior
+monster_type_line: Beast-Warrior / Normal
 attribute: EARTH
 level: 4
 atk: 1100
