--- a/data/cards/06367785.yaml
+++ b/data/cards/06367785.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     用手中的杖，使出各种魔法攻击。
 card_type: Monster
-monster_type_line: Spellcaster
+monster_type_line: Spellcaster / Normal
 attribute: LIGHT
 level: 3
 atk: 950
