--- a/data/cards/08058240.yaml
+++ b/data/cards/08058240.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     咯吱咯吱的勒住对方、拥有封印的力量。
 card_type: Monster
-monster_type_line: Fairy
+monster_type_line: Fairy / Normal
 attribute: LIGHT
 level: 3
 atk: 1000
