--- a/data/cards/10598400.yaml
+++ b/data/cards/10598400.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     由虾进化成的怪兽。用大钳子攻击对方的颈项。
 card_type: Monster
-monster_type_line: Aqua
+monster_type_line: Aqua / Normal
 attribute: WATER
 level: 2
 atk: 600
