--- a/data/cards/17115745.yaml
+++ b/data/cards/17115745.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     出现在神话世界的蛇。非常的长。
 card_type: Monster
-monster_type_line: Reptile
+monster_type_line: Reptile / Normal
 attribute: EARTH
 level: 3
 atk: 1200
