--- a/data/cards/17238333.yaml
+++ b/data/cards/17238333.yaml
@@ -32,7 +32,7 @@ text:
   zh-CN: |-
     各家屋顶都有的冤魂。从不做坏事。
 card_type: Monster
-monster_type_line: Fiend
+monster_type_line: Fiend / Normal
 attribute: DARK
 level: 2
 atk: 550
