--- a/data/cards/17511156.yaml
+++ b/data/cards/17511156.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     作出令人讨厌的笑容的恶魔。以手中的镰刀熟练的回避着攻击。
 card_type: Monster
-monster_type_line: Warrior
+monster_type_line: Warrior / Normal
 attribute: EARTH
 level: 3
 atk: 800
