--- a/data/cards/20541432.yaml
+++ b/data/cards/20541432.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     封印心中的良知，使对方成为恶魔的手下。
 card_type: Monster
-monster_type_line: Fiend
+monster_type_line: Fiend / Normal
 attribute: DARK
 level: 4
 atk: 1050
