--- a/data/cards/36904469.yaml
+++ b/data/cards/36904469.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     潜在水中形状不明的怪兽。
 card_type: Monster
-monster_type_line: Aqua
+monster_type_line: Aqua / Normal
 attribute: WATER
 level: 5
 atk: 1700
