--- a/data/cards/41061625.yaml
+++ b/data/cards/41061625.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     有意志的椰子树。以落下的果实进行攻击。果实中的椰汁味道鲜美。
 card_type: Monster
-monster_type_line: Plant
+monster_type_line: Plant / Normal
 attribute: EARTH
 level: 2
 atk: 800
