--- a/data/cards/41762634.yaml
+++ b/data/cards/41762634.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     攻击力高强的巨型吸血跳蚤，轻视它会非常危险。
 card_type: Monster
-monster_type_line: Insect
+monster_type_line: Insect / Normal
 attribute: EARTH
 level: 4
 atk: 1500
