--- a/data/cards/42625254.yaml
+++ b/data/cards/42625254.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     恐龙的孩子。性格极其凶暴。
 card_type: Monster
-monster_type_line: Dinosaur
+monster_type_line: Dinosaur / Normal
 attribute: EARTH
 level: 3
 atk: 1100
