--- a/data/cards/48531733.yaml
+++ b/data/cards/48531733.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     用双臂的电击鞭麻痹对手，勒脖子进行攻击。
 card_type: Monster
-monster_type_line: Thunder
+monster_type_line: Thunder / Normal
 attribute: WATER
 level: 3
 atk: 1100
