--- a/data/cards/49791927.yaml
+++ b/data/cards/49791927.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     手持巨斧的兽战士。能够放出行动迅速的人偶，攻击强劲。
 card_type: Monster
-monster_type_line: Beast-Warrior
+monster_type_line: Beast-Warrior / Normal
 attribute: EARTH
 level: 4
 atk: 1300
