--- a/data/cards/54844990.yaml
+++ b/data/cards/54844990.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     行动敏捷、用钳子捕捉对方，带有剧毒刺针的蝎子战士。
 card_type: Monster
-monster_type_line: Warrior
+monster_type_line: Warrior / Normal
 attribute: DARK
 level: 3
 atk: 900
