--- a/data/cards/57405307.yaml
+++ b/data/cards/57405307.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     挥动翅膀卷起强有力的龙卷风。
 card_type: Monster
-monster_type_line: Winged Beast
+monster_type_line: Winged Beast / Normal
 attribute: WIND
 level: 4
 atk: 1200
