--- a/data/cards/68928540.yaml
+++ b/data/cards/68928540.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     用两把镰刀袭击对方的一种人型螳螂怪兽。
 card_type: Monster
-monster_type_line: Insect
+monster_type_line: Insect / Normal
 attribute: EARTH
 level: 4
 atk: 1150
