--- a/data/cards/72269672.yaml
+++ b/data/cards/72269672.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     激怒它的话，头上的火山可是会爆发的哦。
 card_type: Monster
-monster_type_line: Rock
+monster_type_line: Rock / Normal
 attribute: EARTH
 level: 4
 atk: 1200
