--- a/data/cards/82065276.yaml
+++ b/data/cards/82065276.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     从异世界来到这里，稀里糊涂的战士。
 card_type: Monster
-monster_type_line: Warrior
+monster_type_line: Warrior / Normal
 attribute: EARTH
 level: 3
 atk: 1250
