--- a/data/cards/82085619.yaml
+++ b/data/cards/82085619.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     即便在决斗中吵架，显示出友情就能和好。
 card_type: Monster
-monster_type_line: Fairy
+monster_type_line: Fairy / Normal
 attribute: LIGHT
 level: 4
 atk: 1300
