--- a/data/cards/84990171.yaml
+++ b/data/cards/84990171.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     使用剑和大豆攻击的植物战士，意外的强悍。
 card_type: Monster
-monster_type_line: Plant
+monster_type_line: Plant / Normal
 attribute: EARTH
 level: 4
 atk: 1400
