--- a/data/cards/92409659.yaml
+++ b/data/cards/92409659.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     头上有角的白色海豚。引起大浪攻击对方。
 card_type: Monster
-monster_type_line: Fish
+monster_type_line: Fish / Normal
 attribute: WATER
 level: 2
 atk: 500
