--- a/data/cards/97232518.yaml
+++ b/data/cards/97232518.yaml
@@ -8,7 +8,7 @@ name:
   it: Pastinaca dell'Abisso
   pt: Raio Atordoador do Abismo
   ja: <ruby>深<rt>しん</rt></ruby><ruby>淵<rt>えん</rt></ruby>のスタングレイ
-  ja_romaji: Shinen no Sutangurei
+  ja_romaji: Shin'en no Sutangurei
   ko: 심연의 스턴그레이
   ko_rr:
   zh-TW:
