--- a/data/cards/10262698.yaml
+++ b/data/cards/10262698.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     存在于复活岛的石像，能够发射圆形的激光。
 card_type: Monster
-monster_type_line: Rock
+monster_type_line: Rock / Normal
 attribute: EARTH
 level: 4
 atk: 1100
