--- a/data/cards/21239280.yaml
+++ b/data/cards/21239280.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     被猫杀死的老鼠。为了报仇雪恨化为不死形态。
 card_type: Monster
-monster_type_line: Zombie
+monster_type_line: Zombie / Normal
 attribute: DARK
 level: 1
 atk: 400
