--- a/data/cards/34290067.yaml
+++ b/data/cards/34290067.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     在海里彷徨的鲨鱼，遇上它的人都会被施与诅咒。
 card_type: Monster
-monster_type_line: Zombie
+monster_type_line: Zombie / Normal
 attribute: DARK
 level: 3
 atk: 1100
