--- a/data/cards/34536276.yaml
+++ b/data/cards/34536276.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     长有钳子的蜘蛛。用蜘蛛丝封住对方的动作用螃蟹钳子杀死对方。
 card_type: Monster
-monster_type_line: Insect
+monster_type_line: Insect / Normal
 attribute: EARTH
 level: 2
 atk: 600
