--- a/data/cards/40200834.yaml
+++ b/data/cards/40200834.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     平时沉睡着的猛兽。一旦苏醒就使人招架不住。
 card_type: Monster
-monster_type_line: Beast
+monster_type_line: Beast / Normal
 attribute: EARTH
 level: 4
 atk: 700
