--- a/data/cards/48365709.yaml
+++ b/data/cards/48365709.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     能在黑暗中悄然无声地靠近敌人，精通暗杀的战士。
 card_type: Monster
-monster_type_line: Warrior
+monster_type_line: Warrior / Normal
 attribute: EARTH
 level: 5
 atk: 1700
