--- a/data/cards/56713552.yaml
+++ b/data/cards/56713552.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     任何东西都咬的野老鼠，行仪极坏。
 card_type: Monster
-monster_type_line: Beast
+monster_type_line: Beast / Normal
 attribute: EARTH
 level: 3
 atk: 750
