--- a/data/cards/68963107.yaml
+++ b/data/cards/68963107.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     书形的魔法师。写有各种各样的魔法。
 card_type: Monster
-monster_type_line: Spellcaster
+monster_type_line: Spellcaster / Normal
 attribute: DARK
 level: 2
 atk: 650
