--- a/data/cards/72076281.yaml
+++ b/data/cards/72076281.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     投下左右翅膀里搭载的爆弹的机械蝙蝠。
 card_type: Monster
-monster_type_line: Machine
+monster_type_line: Machine / Normal
 attribute: WIND
 level: 1
 atk: 300
