--- a/data/cards/92391084.yaml
+++ b/data/cards/92391084.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     相当凶暴的兔子。以锐利的钩爪血祭对方。
 card_type: Monster
-monster_type_line: Beast
+monster_type_line: Beast / Normal
 attribute: EARTH
 level: 4
 atk: 1000
