--- a/data/cards/98795934.yaml
+++ b/data/cards/98795934.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     大炮状的恶魔。以飞快的速度发射眼球弹。
 card_type: Monster
-monster_type_line: Fiend
+monster_type_line: Fiend / Normal
 attribute: DARK
 level: 5
 atk: 1700
