--- a/data/cards/00756652.yaml
+++ b/data/cards/00756652.yaml
@@ -37,7 +37,7 @@ series:
 - Fan-Made Cards
 images:
 - index: 1
-  image: Doron-B01-JP-C.jpg
+  image: Doron-B1-JP-C.png
 sets:
   ja:
   - set_number: ''
