--- a/data/cards/08505920.yaml
+++ b/data/cards/08505920.yaml
@@ -7,8 +7,8 @@ name:
   fr: Association du Gardien de la Porte
   it: Guardiano del Cancello Combinati
   pt: Grupo Guardião do Portão
-  ja:
-  ja_romaji:
+  ja: <ruby>合<rt>がっ</rt></ruby><ruby>体<rt>たい</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>神<rt>しん</rt></ruby>－ゲート・ガーディアン
+  ja_romaji: Gattai Mashin - Gēto Gādian
   ko:
   ko_rr:
   zh-TW:
@@ -77,6 +77,12 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Super Rare
+  ja:
+  - set_number: WPP4-JP003
+    set_name: World Premiere Pack 2023
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
