--- a/data/cards/15042735.yaml
+++ b/data/cards/15042735.yaml
@@ -28,7 +28,7 @@ text:
   zh-CN: |-
     荒野的龙卷风。用风之刃切割对方。
 card_type: Monster
-monster_type_line: Spellcaster
+monster_type_line: Spellcaster / Normal
 attribute: WIND
 level: 2
 atk: 900
