--- a/data/cards/35026117.yaml
+++ b/data/cards/35026117.yaml
@@ -7,8 +7,8 @@ name:
   fr: Char Lourd du Labyrinthe
   it: Carrarmato Pesante Labirinto
   pt: Tanque Pesado do Labirinto
-  ja:
-  ja_romaji:
+  ja: <ruby>迷<rt>めい</rt></ruby><ruby>宮<rt>きゅう</rt></ruby>の<ruby>重<rt>じゅう</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>戦<rt>せん</rt></ruby><ruby>車<rt>しゃ</rt></ruby>
+  ja_romaji: Meikyū no Jūmasensha
   ko:
   ko_rr:
   zh-TW:
@@ -66,6 +66,10 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Super Rare
+  ja:
+  - set_number: WPP4-JP001
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
