--- a/data/cards/40196604.yaml
+++ b/data/cards/40196604.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     从水晶中发射强烈的光线进行攻击。
 card_type: Monster
-monster_type_line: Fiend
+monster_type_line: Fiend / Normal
 attribute: WIND
 level: 3
 atk: 1000
