--- a/data/cards/34771947.yaml
+++ b/data/cards/34771947.yaml
@@ -7,8 +7,8 @@ name:
   fr: Ombre du Mur du Labyrinthe
   it: Ombra delle Mura Labirintiche
   pt: Sombra das Paredes do Labirinto
-  ja:
-  ja_romaji:
+  ja: ラビリンス・ウォール・シャドウ
+  ja_romaji: Rabirinsu Wōru Shadou
   ko:
   ko_rr:
   zh-TW:
@@ -64,6 +64,12 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Rare
+  ja:
+  - set_number: WPP4-JP007
+    set_name: World Premiere Pack 2023
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
