--- a/data/cards/34904525.yaml
+++ b/data/cards/34904525.yaml
@@ -7,8 +7,8 @@ name:
   fr: Gardien de la Porte du Tonnerre et du Vent
   it: Guardiano del Cancello del Tuono e del Vento
   pt: Guardião do Portão do Trovão e do Vento
-  ja:
-  ja_romaji:
+  ja: <ruby>雷<rt>らい</rt></ruby><ruby>風<rt>ふう</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>神<rt>しん</rt></ruby>－ゲート・ガーディアン
+  ja_romaji: Raifū Mashin - Gēto Gādian
   ko:
   ko_rr:
   zh-TW:
@@ -77,6 +77,11 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Super Rare
+  ja:
+  - set_number: WPP4-JP004
+    set_name: World Premiere Pack 2023
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
