--- a/data/cards/60176682.yaml
+++ b/data/cards/60176682.yaml
@@ -7,8 +7,8 @@ name:
   fr: Double Attaque ! Vent et Tonnerre !
   it: Doppio Attacco! Vento e Tuono!!
   pt: Ataque Duplo! Vento e Trovão!!
-  ja:
-  ja_romaji:
+  ja: <ruby>魔<rt>ま</rt></ruby><ruby>風<rt>ふう</rt></ruby><ruby>衝<rt>しょう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>波<rt>は</rt></ruby>
+  ja_romaji: Mafū Shōgekiha
   ko:
   ko_rr:
   zh-TW:
@@ -64,6 +64,10 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Rare
+  ja:
+  - set_number: WPP4-JP008
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
