--- a/data/cards/61398234.yaml
+++ b/data/cards/61398234.yaml
@@ -7,8 +7,8 @@ name:
   fr: Gardien de la Porte du Vent et de l'Eau
   it: Guardiano del Cancello del Vento e dell'Acqua
   pt: Guardião do Portão do Vento e da Água
-  ja:
-  ja_romaji:
+  ja: <ruby>風<rt>ふう</rt></ruby><ruby>水<rt>すい</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>神<rt>しん</rt></ruby>－ゲート・ガーディアン
+  ja_romaji: Fūsui Mashin - Gēto Gādian
   ko:
   ko_rr:
   zh-TW:
@@ -77,6 +77,11 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Super Rare
+  ja:
+  - set_number: WPP4-JP005
+    set_name: World Premiere Pack 2023
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
