--- a/data/tcg-speed-skill/yugipedia1004334.yaml
+++ b/data/tcg-speed-skill/yugipedia1004334.yaml
@@ -1,6 +1,6 @@
 name:
   en: The Dragon Hunting Swordsman
-  de:
+  de: Der drachenjagende Schwertkämpfer
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Yami Yugi / Skill
 activation:
   en: |-
     At the start of the Duel, flip this card over.
-  de:
+  de: |-
+    Am Beginn des Duells, drehe diese Karte um.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per Duel, you can discard 1 card, then Fusion Summon 1 Fusion Monster that mentions "Buster Blader", using monsters from your hand or field as material. While the only monster you control is "Buster Blader" or a Fusion Monster that mentions it, monsters in your opponent's GY become Dragons.
-  de:
+  de: |-
+    Einmal pro Duell kannst du 1 Karte abwerfen, dann beschwöre 1 Fusionsmonster, das „Buster-Klingenkämpfer“ erwähnt, als Fusionsbeschwörung und verwende dafür Monster von deiner Hand oder Spielfeldseite als Material. Solange das einzige Monster, das du kontrollierst, „Buster-Klingenkämpfer“ oder ein Fusionsmonster ist, das ihn erwähnt, werden Monster im Friedhof deines Gegners zu Drachen.
   es:
   fr:
   it:
