--- a/data/tcg-speed-skill/yugipedia1004339.yaml
+++ b/data/tcg-speed-skill/yugipedia1004339.yaml
@@ -1,6 +1,6 @@
 name:
   en: Premature Material
-  de:
+  de: Unfertiges Material
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Bonz / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per Duel, lose 800 LP and reveal 1 Fusion Monster in your Extra Deck, then Special Summon 1 Normal Monster from your GY whose name is mentioned on that Fusion Monster as material, but its ATK/DEF become 0.
-  de:
+  de: |-
+    Einmal pro Duell verlierst du 800 LP und zeigst 1 Fusionsmonster in deinem Extra Deck vor, dann beschwöre 1 Normales Monster, dessen Name auf jenem Fusionsmonster als Material erwähnt wird, als Spezialbeschwörung von deinem Friedhof, aber seine ATK/DEF werden zu 0.
   es:
   fr:
   it:
