--- a/data/tcg-speed-skill/yugipedia1004344.yaml
+++ b/data/tcg-speed-skill/yugipedia1004344.yaml
@@ -1,6 +1,6 @@
 name:
   en: Malicious Motivation
-  de:
+  de: Hinterhältige Motive
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Joey / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per Duel, if your opponent controls 3 monsters, discard 1 card, then destroy all monsters your opponent controls, also for the rest of this turn, any damage your opponent takes is halved.
-  de:
+  de: |-
+    Einmal pro Duell, falls dein Gegner 3 Monster kontrolliert, wirf 1 Karte ab, dann zerstöre alle Monster, die dein Gegner kontrolliert, zusätzlich wird der Schaden, den dein Gegner erhält, für den Rest dieses Spielzugs halbiert.
   es:
   fr:
   it:
