--- a/data/tcg-speed-skill/yugipedia1004347.yaml
+++ b/data/tcg-speed-skill/yugipedia1004347.yaml
@@ -1,6 +1,6 @@
 name:
   en: Collector
-  de:
+  de: Sammler
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Rare Hunter / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per Duel, if your opponent controls a monster, discard 2 cards with different card types (Monster, Spell, Trap) then add 1 card from your Deck to your hand of the third type.
-  de:
+  de: |-
+    Einmal pro Duell, falls dein Gegner ein Monster kontrolliert, wirf 2 Karten mit unterschiedlichen Kartentypen (Monster, Zauber, Falle) ab, dann füge deiner Hand 1 Karte des dritten Typs von deinem Deck hinzu.
   es:
   fr:
   it:
