--- a/data/tcg-speed-skill/yugipedia1004349.yaml
+++ b/data/tcg-speed-skill/yugipedia1004349.yaml
@@ -1,6 +1,6 @@
 name:
   en: My Precious Queen!
-  de:
+  de: Meine geschätzte Königin!
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Weevil / Skill
 activation:
   en: |-
     At the start of the Duel, flip this card over.
-  de:
+  de: |-
+    Am Beginn des Duells, drehe diese Karte um.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     You can Normal Summon Level 7 Insect monsters for 1 less Tribute. Once per turn, during the End Phase, you can Special Summon 1 "Insect Monster Token" (Insect/EARTH/Level 1/ATK 100/DEF 100). This Token cannot be Tributed, except for the Tribute Summon of an Insect monster or their effects. You can Tribute 1 Insect monster from your hand instead, when attacking with "Insect Queen" monsters you control.
-  de:
+  de: |-
+    Du kannst Insekt-Monster der Stufe 7 mit 1 Tribut weniger als Normalbeschwörung beschwören. Einmal pro Spielzug, während der End Phase, kannst du „Insektenmonster-Spielmarke“ (Insekt/ERDE/Stufe 1/ATK 100/DEF 100) als Spezialbeschwörung beschwören. Diese Spielmarke kann nicht als Tribut angeboten werden, außer für die Tributbeschwörung eines Insekt-Monsters oder seine Effekte. Du kannst stattdessen 1 Insekt-Monster von deiner Hand als Tribut anbieten, wenn du mit „Insektenkönigin“-Monstern angreifst, die du kontrollierst.
   es:
   fr:
   it:
