--- a/data/tcg-speed-skill/yugipedia1004350.yaml
+++ b/data/tcg-speed-skill/yugipedia1004350.yaml
@@ -1,6 +1,6 @@
 name:
   en: A Bountiful Ocean
-  de:
+  de: Ein freigiebiger Ozean
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Mako / Skill
 activation:
   en: |-
     At the start of the Duel, flip this card over.
-  de:
+  de: |-
+    Am Beginn des Duells, drehe diese Karte um.
   es:
   fr:
   it:
@@ -29,7 +30,10 @@ effect:
     While "Umi" is face-up on the field, apply the following:
     ● Non-Effect WATER monsters you control are unaffected by non-WATER monster effects.
     ● Once per turn, you can add 1 WATER monster from your GY to your hand, but for the rest of this turn, you cannot activate cards or effects, until you Normal Summon that monster or a card with its name.
-  de:
+  de: |-
+    Solange „Umi“ offen auf dem Spielfeld liegt, wende das Folgende an:
+    ● WASSER Nichteffekt-Monster, die du kontrollierst, bleiben von den Effekten von Nicht-WASSER Monstern unberührt.
+    ● Einmal pro Spielzug kannst du deiner Hand 1 WASSER Monster von deinem Friedhof hinzufügen, aber für den Rest dieses Spielzugs kannst du weder Karten noch Effekte aktivieren, bis du jenes Monster oder eine Karte mit seinem Namen als Normalbeschwörung beschworen hast.
   es:
   fr:
   it:
