--- a/data/tcg-speed-skill/yugipedia1004351.yaml
+++ b/data/tcg-speed-skill/yugipedia1004351.yaml
@@ -1,6 +1,6 @@
 name:
   en: Heart of a Warrior
-  de:
+  de: Herz eines Kriegers
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Joey / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per turn, you can discard 1 card, then Special Summon 1 Level 5 or lower Warrior non-Effect Fusion Monster from your Extra Deck. (This is treated as a Fusion Summon.) You cannot Normal Summon/Set the turn you activate this Skill.
-  de:
+  de: |-
+    Einmal pro Spielzug kannst du 1 Karte abwerfen, dann beschwöre 1 Krieger-Nichteffekt-Fusionsmonster der Stufe 5 oder niedriger als Spezialbeschwörung von deinem Extra Deck. (Dies wird als Fusionsbeschwörung behandelt.) Du kannst in dem Spielzug, in dem du diese Fähigkeit aktivierst, kein/e Normalbeschwörungen/Setzen durchführen.
   es:
   fr:
   it:
