--- a/data/tcg-speed-skill/yugipedia1004353.yaml
+++ b/data/tcg-speed-skill/yugipedia1004353.yaml
@@ -1,6 +1,6 @@
 name:
   en: Now You See Them...
-  de:
+  de: Jetzt siehst du sie...
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Arkana / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -30,7 +31,11 @@ effect:
     ● 1: 1 card.
     ● 2: 3 cards.
     ● 3: 5 cards.
-  de:
+  de: |-
+    Einmal pro Duell, falls du 2 oder mehr „Dunkler Magier“ in deiner Hand hast, zeige deine Hand vor und lege eine beliebige Anzahl „Dunkler Magier“ von deiner Hand unter die Decks, dann ziehe Karten basierend darauf, wie viele Karten du gelegt hast.
+    ● 1: 1 Karte.
+    ● 2: 3 Karten.
+    ● 3: 5 Karten.
   es:
   fr:
   it:
