--- a/data/tcg-speed-skill/yugipedia1004355.yaml
+++ b/data/tcg-speed-skill/yugipedia1004355.yaml
@@ -1,6 +1,6 @@
 name:
   en: Intel from the "Cosmos"
-  de:
+  de: Intelligenz aus dem „Kosmos“
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Espa Roba / Skill
 activation:
   en: |-
     At the start of the Duel, flip this card over.
-  de:
+  de: |-
+    Am Beginn des Duells, drehe diese Karte um.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Your opponent must reveal all cards they draw during their Draw Phase.
-  de:
+  de: |-
+    Dein Gegner muss alle Karten vorzeigen, die er während seiner Draw Phase zieht.
   es:
   fr:
   it:
