--- a/data/tcg-speed-skill/yugipedia1004357.yaml
+++ b/data/tcg-speed-skill/yugipedia1004357.yaml
@@ -31,7 +31,7 @@ effect:
     ● Your opponent cannot target face-up WATER monsters you control with Spell/Trap cards or effects.
   de: |-
     Wirf 1 Karte von deiner Hand ab und füge deiner Hand „Festungswal“ oder „Eid des Festungswals“ von deinem Deck hinzu. „Festungswal“-Monster, die du kontrollierst, erhalten den folgenden Effekt:
-    • Dein Gegner kann offene WASSER Monster, die du kontrollierst, nicht als Ziel für Zauber-/Fallenkarten oder -effekte wählen.
+    ● Dein Gegner kann offene WASSER Monster, die du kontrollierst, nicht als Ziel für Zauber-/Fallenkarten oder -effekte wählen.
   es:
   fr:
   it:
