--- a/data/tcg-speed-skill/yugipedia1004340.yaml
+++ b/data/tcg-speed-skill/yugipedia1004340.yaml
@@ -1,6 +1,6 @@
 name:
   en: Battle City Siren
-  de:
+  de: Sirene aus Battle City
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Mai / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per turn, during your Main Phase, you can change the battle position of 1 monster your opponent controls. This turn, the first attack you declare must target that monster. This Skill can only be used twice per Duel.
-  de:
+  de: |-
+    Einmal pro Spielzug, während deiner Main Phase, kannst du die Kampfposition von 1 Monster ändern, das dein Gegner kontrolliert. Der erste Angriff in diesem Spielzug, den du deklarierst, muss jenes Monster als Ziel wählen. Diese Fähigkeit kann nur zweimal pro Duell verwendet werden.
   es:
   fr:
   it:
