--- a/data/tcg-speed-skill/yugipedia1004345.yaml
+++ b/data/tcg-speed-skill/yugipedia1004345.yaml
@@ -1,6 +1,6 @@
 name:
   en: Slimey Disposition
-  de:
+  de: Schleimiges Wesen
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Strings / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per turn, you can Special Summon 1 "Humanoid Slime" or 1 "Worm Drake" from your GY in Attack Position, but it cannot be Tributed, except for the Tribute Summon of a Divine-Beast monster. Once per turn, you can discard 1 card, then Fusion Summon 1 "Humanoid Worm Drake" using either "Worm Drake" or "Humanoid Slime" from your field as 1 of the Fusion Materials, and the other material from your Deck.
-  de:
+  de: |-
+    Einmal pro Spielzug kannst du „Menschlicher Schleim“ oder „Drachenwurm“ als Spezialbeschwörung von deinem Friedhof in die Angriffsposition beschwören, aber er kann nicht als Tribut angeboten werden, außer für die Tributbeschwörung eines Göttliches Ungeheuer-Monsters. Einmal pro Spielzug kannst du 1 Karte abwerfen, dann beschwöre „Menschlicher Drachenwurm“ als Fusionsbeschwörung und verwende dafür entweder „Drachenwurm“ oder „Menschlicher Schleim“ von deiner Spielfeldseite als 1 des Fusionsmaterials und das andere Material von deinem Deck.
   es:
   fr:
   it:
