--- a/data/tcg-speed-skill/yugipedia1004346.yaml
+++ b/data/tcg-speed-skill/yugipedia1004346.yaml
@@ -1,6 +1,6 @@
 name:
   en: A Terrible Fate
-  de:
+  de: Ein schreckliches Schicksal
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Arkana / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per Duel, during your End Phase, Tribute 1 face-up Spellcaster monster you control, then your opponent destroys 1 card they control or sends 1 card from their hand to the GY (their choice).
-  de:
+  de: |-
+    Einmal pro Duell, während deiner End Phase, biete 1 offenes Hexer-Monster, das du kontrollierst, als Tribut an, dann zerstört dein Gegner 1 Karte, die er kontrolliert, oder legt 1 Karte von seiner Hand auf den Friedhof (er bestimmt).
   es:
   fr:
   it:
