--- a/data/tcg-speed-skill/yugipedia1004348.yaml
+++ b/data/tcg-speed-skill/yugipedia1004348.yaml
@@ -1,6 +1,6 @@
 name:
   en: The Machine Menace
-  de:
+  de: Die Maschinenbedrohung
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Espa Roba / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per Duel, if your opponent controls a face-up Trap, Tribute 1 Machine or Psychic monster you control, then Special Summon 1 "Jinzo" from your hand or GY.
-  de:
+  de: |-
+    Einmal pro Duell, falls dein Gegner eine offene Falle kontrolliert, biete 1 Maschine- oder Psi-Monster, das du kontrollierst, als Tribut an, dann beschwöre 1 „Jinzo“ als Spezialbeschwörung von deiner Hand oder deinem Friedhof.
   es:
   fr:
   it:
