--- a/data/tcg-speed-skill/yugipedia1004352.yaml
+++ b/data/tcg-speed-skill/yugipedia1004352.yaml
@@ -1,6 +1,6 @@
 name:
   en: Slimey Slimes
-  de:
+  de: Schleimiger Schleim
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Strings / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     Once per turn, during your Main Phase, you can destroy 1 "Jam Breeding Machine" you control and 1 Spell/Trap your opponent controls. Once per turn, during your Standby Phase, if you Special Summoned "Revival Jam" by it's own effect this turn, draw 3 cards.
-  de:
+  de: |-
+    Einmal pro Spielzug, während deiner Main Phase, kannst du 1 „Schleimbrutmaschine“, die du kontrollierst, und 1 Zauber/ Falle, den oder die dein Gegner kontrolliert, zerstören. Einmal pro Spielzug, während deiner Standby Phase, falls du in diesem Spielzug „Wiederbelebungsschleim“ durch seinen eigenen Effekt als Spezialbeschwörung beschworen hast, ziehe 3 Karten.
   es:
   fr:
   it:
