--- a/data/tcg-speed-skill/yugipedia1004356.yaml
+++ b/data/tcg-speed-skill/yugipedia1004356.yaml
@@ -1,6 +1,6 @@
 name:
   en: Insect Infestation
-  de:
+  de: Insektenbefall
   es:
   fr:
   it:
@@ -15,7 +15,8 @@ type_line: Weevil / Skill
 activation:
   en: |-
     At the start of the Duel, flip this card over.
-  de:
+  de: |-
+    Drehe diese Karte um, wenn du diese Fähigkeit aktivierst.
   es:
   fr:
   it:
@@ -27,7 +28,8 @@ activation:
 effect:
   en: |-
     "Parasite Paracide(s)" on the field cannot be Tributed. If all monsters on the field are Insect monster(s), Level 7 or higher Insect monsters you control can attack directly. Once per Duel, you can discard 1 card, then place 1 "Parasite Paracide" from your GY on top of your opponent's Deck face-up. Treat it as if it were added to their Deck by its effect.
-  de:
+  de: |-
+    „Parasiten-Parazid“ auf dem Spielfeld kann nicht als Tribut angeboten werden. Falls alle Monster auf dem Spielfeld Insekt-Monster sind, können Insekt-Monster der Stufe 7 oder höher, die du kontrollierst, direkt angreifen. Einmal pro Duell kannst du 1 Karte abwerfen, dann lege 1 „Parasiten-Parazid“ von deinem Friedhof offen auf das Deck deines Gegners. Behandle ihn, als ob er seinem Deck durch seinen Effekt hinzugefügt worden wäre.
   es:
   fr:
   it:
